--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vue-Summer-Camp-Week2</title>
+		<title>Vue-Summer-Camp-Week3</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -30,205 +30,126 @@
 						<i class="nes-mario"></i>
 						<i class="nes-icon coin is-large"></i>
 						<i class="nes-icon coin is-large"></i>
-
-						<span class="navbar-brand mb-0 h1">Summer-Vue-Camp Week-2</span>
+						<i class="nes-icon coin is-large"></i>
+						<span class="navbar-brand mb-0 h1">Summer-Vue-Camp Week-3</span>
 					</div>
 				</nav>
 			</header>
 			<div class="main mt-5">
 				<div class="container">
-					<div class="nes-container with-title is-centered container">
-						<div class="row">
-							<div class="col-8">
-								<p class="title">Calculator</p>
-								<div class="nes-field">
-									<h1>{{value}}</h1>
-									<span>{{ computeProcess }}</span>
-								</div>
-								<br />
+					<div class="nes-container is-dark with-title">
+						<p class="title">Todo-list</p>
+						<p>WHAT NEEDS TO BE DONE ?</p>
+						<div
+							style="background-color: #212529; padding: 1rem"
+							class="nes-field is-inline"
+						>
+							<label for="dark_field" style="color: #fff">TASK</label>
+							<input
+								type="text"
+								id="dark_field"
+								class="nes-input is-dark"
+								placeholder="WRITE DONE HERE.."
+								id="newTodo"
+								v-model.trim="newTodo"
+								@keyup.enter="creatItem"
+							/>
+							<button
+								type="button"
+								class="nes-btn is-primary"
+								id="addTodo"
+								@click="creatItem"
+							>
+								NEW
+							</button>
+						</div>
+					</div>
+					<!-- HISTORY TASK -->
+					<div class="nes-container is-dark with-title mt-5">
+						<p class="title">Task</p>
 
-								<div class="nes-container is-rounded container w-80% mx-auto">
-									<div class="row">
-										<div class="col-8">
-											<div class="col">
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="7"
-													@click="getNum"
-												>
-													7
-												</button>
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="8"
-													@click="getNum"
-												>
-													8
-												</button>
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="9"
-													@click="getNum"
-												>
-													9
-												</button>
-											</div>
-											<div class="col">
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="4"
-													@click="getNum"
-												>
-													4
-												</button>
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="5"
-													@click="getNum"
-												>
-													5
-												</button>
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="6"
-													@click="getNum"
-												>
-													6
-												</button>
-											</div>
-											<div class="col">
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="1"
-													@click="getNum"
-												>
-													1
-												</button>
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="2"
-													@click="getNum"
-												>
-													2
-												</button>
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="3"
-													@click="getNum"
-												>
-													3
-												</button>
-											</div>
-											<div class="col">
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="#"
-													@click="getNum"
-												>
-													#
-												</button>
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="0"
-													@click="getNum"
-												>
-													0
-												</button>
-												<button
-													type="button"
-													class="nes-btn is-warning"
-													value="."
-													@click="pointBtn"
-												>
-													.
-												</button>
-											</div>
-										</div>
-										<div class="col-4">
-											<button
-												type="button"
-												class="nes-btn is-primary"
-												@click="clearBtn"
-											>
-												AC
-											</button>
-											<button
-												type="button"
-												class="nes-btn is-success"
-												@click="negativeBtn"
-											>
-												±
-											</button>
-											<button
-												type="button"
-												class="nes-btn is-success"
-												value="÷"
-												@click="symbolBtn"
-											>
-												÷
-											</button>
-											<button
-												type="button"
-												class="nes-btn is-success"
-												value="×"
-												@click="symbolBtn"
-											>
-												×
-											</button>
-											<button
-												type="button"
-												class="nes-btn is-success"
-												value="-"
-												@click="symbolBtn"
-											>
-												-
-											</button>
-											<button
-												type="button"
-												class="nes-btn is-success"
-												value="+"
-												@click="symbolBtn"
-											>
-												+
-											</button>
-											<button
-												type="button"
-												class="nes-btn is-error"
-												@click="equalBtn"
-											>
-												=
-											</button>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-4">
-								<span class="nes-text">History</span>
-								<div class="lists">
-									<ul class="nes-list is-disc">
-										<li v-for="(item, index) in history" :key="index">
-											{{item}}
-										</li>
+						<div class="lists">
+							<ul class="nes-list is-circle" id="todoList">
+								<li v-for="(item, index) in filterData" :key="item.id">
+									<input
+										type="checkbox"
+										class="nes-checkbox is-dark"
+										:id="'a'+item.id"
+										v-model="item.finish"
+									/>
+									<label
+										:for="'a'+item.id"
+										:class="{ 'text-decoration-line-through': item.finish }"
+									>
+										{{ item.text }}
+									</label>
+
+									<div class="nes-field is-inline" v-show="temp.id === item.id">
+										<label for="inline_field">EDIT</label>
+										<input
+											type="text"
+											id="inline_field"
+											class="nes-input is-success"
+											placeholder="EDIT SOMETHING.."
+											v-model.trim="temp.text"
+											@keyup.enter="updateItem"
+										/>
 										<button
 											type="button"
-											class="nes-btn is-error"
-											@click="clearHistory"
+											class="nes-btn is-success"
+											value="編輯完成"
+											@click="updateItem()"
 										>
-											Clear
+											DONE
 										</button>
-									</ul>
-								</div>
+									</div>
+									<div class="d-flex justify-content-end">
+										<button
+											type="button"
+											class="nes-btn is-success"
+											@click="editItem(item)"
+										>
+											EDIT
+										</button>
+										<button
+											type="button"
+											class="nes-btn is-error text-end"
+											@click="delItem(item)"
+										>
+											DELETE
+										</button>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<!--TASK SELECT STATE -->
+					<div class="nes-container is-dark with-title mt-5">
+						<p class="title">TASK STATE</p>
+						<div class="">
+							<div class="mb-5 d-flex justify-content-center">
+								<span class="nes-text is-success" id="taskCount"
+									>{{ todoList.length }}</span
+								>
+								<span class="nes-text is-warning">TASKS</span>
+							</div>
+
+							<div class="d-flex justify-content-evenly">
+								<a href="#" class="nes-badge" @click.prevent="status = 'all'">
+									<span class="is-primary">all</span>
+								</a>
+
+								<a href="#" class="nes-badge" @click.prevent="status = false">
+									<span class="is-success">undone</span>
+								</a>
+
+								<a href="#" class="nes-badge" @click.prevent="status = true">
+									<span class="is-warning">done</span>
+								</a>
+
+								<a href="#" class="nes-badge" @click.prevent="removeAll">
+									<span class="is-error">delete</span>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -251,153 +172,60 @@
 			Vue.createApp({
 				data() {
 					return {
-						value: 0,
-						preValue: 0,
-						tmpResult: 0,
-						point: "",
-						positive: true,
-						sign_now: "",
-						sign_last: "",
-						computeArray: [],
-						computeProcess: "",
-						history: [],
+						newTodo: "",
+						temp: "",
+						todoList: [],
+						edit: false,
+						num: 0,
+						status: "all",
 					}
 				},
-				mounted() {},
+
 				methods: {
-					//按數字運算
-					//
-					getNum(even) {
-						if (this.sign_now === "=") {
-							this.value = 0
-							this.point = ""
-							this.sign_now = ""
-							this.sign_last = ""
-							this.tmpResult = 0
-							this.computeArray = []
-							this.computeProcess = ""
-						}
-						if (this.point !== ".") {
-							this.value = this.value * 10 + parseInt(even.target.value, 10)
-						} else {
-							this.value = this.value + parseInt(even.target.value, 10) * 0.1
-						}
-
-						this.computeArray.push(`${even.target.value}`)
-						this.computeProcess = this.computeArray.join("")
-						// console.log(this.value)
-					},
-					symbolBtn(even) {
-						let normal = /[1-9]/.test(this.computeProcess)
-						const len = this.computeArray.length
-						let is_number = /[1-9]/.test(this.computeArray[len - 1])
-						if (normal === true && is_number === true) {
-							this.sign_now = even.target.value
-							if (this.preValue === 0) {
-								this.preValue = JSON.stringify(JSON.parse(this.value))
-								// console.log(this.preValue)
-							} else {
-								switch (this.sign_last) {
-									case "+":
-										this.tmpResult = parseFloat(this.preValue) + this.value
-										break
-									case "-":
-										this.tmpResult = parseFloat(this.preValue) - this.value
-										break
-									case "×":
-										this.tmpResult = parseFloat(this.preValue) * this.value
-										break
-									case "÷":
-										this.tmpResult = parseFloat(this.preValue) / this.value
-										break
-								}
-								this.preValue = this.tmpResult
-								console.log(this.preValue)
-							}
-							this.sign_last = this.sign_now
-							this.computeArray.push(`${this.sign_now}`)
-							this.computeProcess = this.computeArray.join("")
-							this.point = ""
-							this.value = 0
+					creatItem() {
+						if (this.newTodo) {
+							this.num++
+							this.todoList.push({
+								text: this.newTodo,
+								id: this.num,
+								finish: false,
+							})
+							this.newTodo = ""
 						}
 					},
-					pointBtn() {
-						if (this.point === "") {
-							this.point = "."
-							this.computeArray.push(`${this.point}`)
-							this.computeProcess = this.computeArray.join("")
+					editItem(item) {
+						this.edit = true
+						this.temp = { ...item }
+					},
+					updateItem() {
+						const index = this.todoList.findIndex(
+							(obj) => obj.id === this.temp.id
+						)
+						this.todoList[index] = this.temp
+						this.edit = false
+						this.temp = ""
+					},
+					delItem(item) {
+						const index = this.todoList.findIndex((obj) => obj.id === item.id)
+						this.todoList.splice(index, 1)
+					},
+					removeAll() {
+						if (window.confirm("DELECT  ALL TASK ? 🥺🥺")) {
+							this.todoList = []
 						}
-					},
-					equalBtn() {
-						this.compute()
-						this.computeArray.push(` = ${this.value}`)
-						this.computeProcess = this.computeArray.join("")
-						this.history.unshift(this.computeProcess)
-						localStorage.setItem("history", JSON.stringify(this.history))
-						this.preValue = 0
-						this.sign_now = "="
-					},
-					compute() {
-						switch (this.sign_last) {
-							case "+":
-								this.value = parseFloat(this.preValue) + this.value
-								break
-							case "-":
-								this.value = parseFloat(this.preValue) - this.value
-								break
-							case "×":
-								this.value = parseFloat(this.preValue) * this.value
-								break
-							case "÷":
-								this.value = parseFloat(this.preValue) / this.value
-								break
-						}
-					},
-					negativeBtn() {
-						this.positive = !this.positive
-						this.value *= -1
-						const len = this.computeArray.length
-
-						let last_sing = this.computeArray.reverse().find((item) => {
-							return (
-								item === "+" || item === "-" || item === "×" || item === "÷"
-							)
-						})
-						let sing_index = this.computeArray.indexOf(last_sing)
-						this.computeArray.reverse()
-						if (sing_index === -1) {
-							this.computeArray.splice(0, 0, "-")
-						} else {
-							this.computeArray.splice(len - sing_index, 0, "-")
-						}
-					},
-					clearBtn() {
-						this.value = 0
-						this.preValue = 0
-						this.point = ""
-						this.sign_now = ""
-						this.sign_last = ""
-						this.tmpResult = 0
-						this.computeArray = []
-						this.computeProcess = ""
-					},
-					checkLocal() {
-						if (
-							typeof Storage == "undefined" ||
-							JSON.parse(localStorage.getItem("computedHistory")) === null
-						) {
-							this.history = []
-						} else {
-							this.history = JSON.parse(localStorage.getItem("computedHistory"))
-						}
-					},
-					clearHistory() {
-						this.history = []
-						localStorage.removeItem("constHistory")
 					},
 				},
-				mounted() {
-					this.checkLocal()
+				computed: {
+					// 篩選狀態
+					filterData() {
+						if (this.status === "all") {
+							return this.todoList
+						}
+						const newData = this.todoList.filter(
+							(obj) => obj.finish === this.status
+						)
+						return newData
+					},
 				},
 			}).mount("#app")
 		</script>
